--- a/package.json
+++ b/package.json
@@ -21,7 +21,21 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@auth0/angular-jwt": "^1.1.0",
+    "angular2-jwt": "^0.2.3",
+    "base64-img": "^1.0.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "fs-": "^1.0.0",
+    "mongodb": "^3.0.4",
+    "mongoose": "^5.0.10",
+    "ngx-flash-messages": "^1.0.4",
+    "nodemon": "^1.17.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
